Generics_Super_WildCard/Code1_error_report.txt
javac errors for Code1.java 
Code1.java:13: error: method foo in class Code1 cannot be applied to given types;
        List<Integer> ret = foo(m);
                            ^
  required: Map<T,? super T>
  found: Map<Number,Integer>
  reason: inference variable T has incompatible bounds
    equality constraints: Number
    upper bounds: Integer,Object
  where T is a type-variable:
    T extends Object declared in method <T>foo(Map<T,? super T>)
1 error
 
============================================================================= 
ExtendJ errors for Code1.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_WildCard\Code1.java:13: error: no method named foo(java.util.Map<java.lang.Number, java.lang.Integer>) in Code1 matches. However, there is a method foo(java.util.Map<T, ? super T>)
 
============================================================================= 
Eclipse ECJ errors for Code1.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_WildCard\Code1.java (at line 13)
	List<Integer> ret = foo(m);
	                    ^^^
The method foo(Map<T,? super T>) in the type Code1 is not applicable for the arguments (Map<Number,Integer>)
----------
1 problem (1 error)
